--- a/Acerca.html
+++ b/Acerca.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -25,8 +25,8 @@
                 </span>
 
                 <div class="contenedor-logo">
-                    <h1 class="logo"><a href="index.html" class="logo-link"><img src="Imagenes/LogoDentArt.png" alt=""></a>
-                    </h1>
+                  <a href="index.html" class="logo-link"><img src="Imagenes/LogoDentArt.png" alt=""></a>
+                
                 </div>
 
                 <ul class="menu" id="menu">
@@ -47,7 +47,7 @@
     <main class="main">
         <section class="banner">
             <img src="Imagenes/protesi-1.jpg" alt="" class="img-banner">
-            <div class="contenido-banner">Nosotros</div>
+            <h2 class="contenido-banner">Nosotros</h2>
         </section>
 
 
@@ -94,14 +94,14 @@
     <footer class="footer-principal">
         <div class="contenedor contenedor-flex">
             <div class="columna columna-flex-footer">
-                <h2 class="titulo-columna"><img src="Imagenes/LogoDentArt.png" alt="" class="imagen-icono-bajo">
-                </h2>
+                <img src="Imagenes/LogoDentArt.png" alt="" class="imagen-icono-bajo">
+                
                 <p class="desc-columna">
                 </p>
             </div>
             <div class="columna  columna-flex-footer">
                 <h2 class="titulo-columna">Contáctanos</h2>
-                <p class="desc-columna">Plazuela 10, 39700 CANTABRIA</p>
+                <p class="desc-columna">Plazuela 10</p>
                 <p class="desc-columna">1163542345</p>
                 <p class="desc-columna">info@mola.com</p>
             </div>
