--- a/Contacto.html
+++ b/Contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -26,8 +26,8 @@
         </span>
 
         <div class="contenedor-logo">
-          <h1 class="logo"><a href="index.html" class="logo-link"><img src="Imagenes/LogoDentArt.png" alt=""></a></h1>
-        </div>
+          <a href="index.html" class="logo-link"><img src="Imagenes/LogoDentArt.png" alt=""></a>
+          </div>
 
         <ul class="menu" id="menu">
           <li class="menu-item"><a href="index.html" class="menu-link menu-link_select a">Inicio</a></li>
@@ -61,7 +61,7 @@
         <input type="number" id="telefono" placeholder="1167282920">
 
        <label for="mensaje" class="mensaje">Mensaje:</label>
-<textarea class="mensaje" id="mensaje" cols="90" rows="6" class="mensaje" 
+<textarea class="mensaje" id="mensaje" cols="90" rows="6" 
           placeholder="Escriba un texto..."></textarea>
 
         <input class="form-buttons" type="submit" value="ENVIAR">
@@ -79,7 +79,7 @@
       </div>
       <div class="columna  columna-flex-footer">
         <h2 class="titulo-columna">Contáctanos</h2>
-        <p class="desc-columna">Plazuela 10, 39700 CANTABRIA</p>
+        <p class="desc-columna">Plazuela 10</p>
         <p class="desc-columna">1163542345</p>
         <p class="desc-columna">info@mola.com</p>
       </div>
