--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -67,7 +67,7 @@
         </span>
 
         <div class="contenedor-logo">
-          <h1 class="logo"><a href="index.html" class="logo-link"><img src="Imagenes/LogoDentArt.png" alt=""></a></h1>
+          <a href="index.html" class="logo-link"><img src="Imagenes/LogoDentArt.png" alt=""></a>
         </div>
 
         <ul class="menu" id="menu">
@@ -88,12 +88,9 @@
   <main class="main">
     <section class="banner">
       <img src="Imagenes/protesi-1.jpg" alt="" class="img-banner">
-      <div class="contenido-banner">Bienvenidos a DentalArt</div>
+      <h2 class="contenido-banner"><i class="fa-solid fa-tooth"></i> - Bienvenidos a DentalArt</div>
     </section>
     <div class="columna columna-50">
-      <img
-        src="Imagenes/purple marble sparkle aesthetic beauty Thank You for order makeup nail art hairdresser fashion card.png"
-        class="momentos-texto" alt="">
       <p class="desc-columna2">Estamos encantados que hayas llegado hasta acá. Hacer lo que nos gusta y
         brindarnos a nuestros clientes es la satisfacción final de un camino recorrido.</p>
     </div>
@@ -177,14 +174,12 @@ Estamos a disposición de odontólogos, técnicos dentales y clínicas dentales 
   <footer class="footer-principal">
     <div class="contenedor contenedor-flex">
       <div class="columna columna-flex-footer">
-        <h2 class="titulo-columna"><img src="Imagenes/LogoDentArt.png" alt="" class="imagen-icono-bajo">
-        </h2>
-        <p class="desc-columna">
-        </p>
+       <img src="Imagenes/LogoDentArt.png" alt="" class="imagen-icono-bajo">
+        
       </div>
       <div class="columna  columna-flex-footer">
         <h2 class="titulo-columna">Contáctanos</h2>
-        <p class="desc-columna">Plazuela 1050, 39700 CANTABRIA</p>
+        <p class="desc-columna">Plazuela 10</p>
         <p class="desc-columna">1163542345</p>
         <p class="desc-columna">info@mola.com</p>
       </div>
