--- a/InicioSesionEmpleado.html
+++ b/InicioSesionEmpleado.html
@@ -26,7 +26,7 @@
         </span>
 
         <div class="contenedor-logo">
-          <h1 class="logo"><a href="index.html" class="logo-link"><img src="Imagenes/LogoDentArt.png" alt=""></a></h1>
+         <a href="index.html" class="logo-link"><img src="Imagenes/LogoDentArt.png" alt=""></a>
         </div>
 
         <ul class="menu" id="menu">
@@ -70,8 +70,8 @@
   <footer class="footer-principal">
     <div class="contenedor contenedor-flex">
       <div class="columna columna-flex-footer">
-        <h2 class="titulo-columna"><img src="Imagenes/LogoDentArt.png" alt="" class="imagen-icono-bajo">
-        </h2>
+       <img src="Imagenes/LogoDentArt.png" alt="" class="imagen-icono-bajo">
+       
         <p class="desc-columna">
         </p>
       </div>
