--- a/Lista.html
+++ b/Lista.html
@@ -45,8 +45,8 @@
         </span>
 
         <div class="contenedor-logo">
-          <h1 class="logo"><a href="index.html" class="logo-link"><img src="Imagenes/LogoDentArt.png" alt=""></a></h1>
-        </div>
+          <a href="index.html" class="logo-link"><img src="Imagenes/LogoDentArt.png" alt=""></a>
+          </div>
 
         <ul class="menu" id="menu">
           <li class="menu-item"><a href="index.html" class="menu-link menu-link_select a">Inicio</a></li>
@@ -124,14 +124,14 @@
   <footer class="footer-principal">
     <div class="contenedor contenedor-flex">
       <div class="columna columna-flex-footer">
-        <h2 class="titulo-columna"><img src="Imagenes/LogoDentArt.png" alt="" class="imagen-icono-bajo">
-        </h2>
+      <img src="Imagenes/LogoDentArt.png" alt="" class="imagen-icono-bajo">
+        
         <p class="desc-columna">
         </p>
       </div>
       <div class="columna  columna-flex-footer">
         <h2 class="titulo-columna">Contáctanos</h2>
-        <p class="desc-columna">Plazuela 10, 39700 CANTABRIA</p>
+        <p class="desc-columna">Plazuela 10</p>
         <p class="desc-columna">1163542345</p>
         <p class="desc-columna">info@mola.com</p>
       </div>
